--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <h1 id="a01">這個網站的內容 </h1>
 <p>
 <ul>
-<li>目前
-<li>作者
-<li>還不知道要
-<li>做什麼
+<li><h1>目前</h1>
+<li><h2>作者</h2>
+<li><h4>還不知道要</h4>
+<li><h5>做什麼</h5>
 </ul>
 </p>
 
 <h1 id="a02">所以暫時先</h1>
 <ol>
 <li>熟悉一下
-<li>HTML語法
+<li><h6>HTML語法</h6>
 <li>的各種用法
 </ol>
 <p>在這邊測試換<br>行</p>
